--- a/manifest.json
+++ b/manifest.json
@@ -1,48 +1,34 @@
 /**
- * Brown Dining Project, version 1.0
+ * Brown Dining Alert, version 1.0
  * 2019
  * project of John Randolph
  *
+ * Design questions:
+ * - do we want to say the time of the food as 'lunch' or as 11-2?
+ * - communicate with a sinlge tile each morning + list onclick
+ * - how to deal with no wifi
+ *
+ * Design to implement:
+ * - scrape.js: once a day, on certain time (or first time when laptop is opened), clear popup.html + use function in background to update foods on popup.html
+ * - background.js:
+ *    - function to grab list of foods to look for from local service
+ *    - function to for each page, scrape it and grab if food appears in it for all food. save data to local data and push alerts
  */
 
 {
   "manifest_version": 2,
 
-  "name": "PageLoop",
+  "name": "Brown Dining Alert",
   "description": "[Description goes here]",
   "version": "1.0",
   "options_page": "options_page.html",
 
   "browser_action": {
-    "default_icon": "icon.png",//the icon
     "default_popup": "popup.html"//what will pop up when clicked on.
   },
   "content_security_policy": "script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js; object-src 'self'",
   "background" : {
     "scripts" : ["background.js"]//always runs in background
-  },
-  "icons" : {
-    "128" : "icon.png"
-  },
-  "commands" : {
-    "loop_one" : {
-      "suggested_key" : {
-        "default" : "Ctrl+Shift+1"
-      },
-      "description": "go to loop one"
-    },
-    "loop_two" : {
-      "suggested_key" : {
-        "default" : "Ctrl+Shift+2"
-      },
-      "description": "go to loop two"
-    },
-    "loop_three" : {
-      "suggested_key" : {
-        "default" : "Ctrl+Shift+3"
-      },
-      "description": "go to loop three"
-    }
   },
   "web_accessible_resources" : [
     "style.css"
