--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
  * project of John Randolph
  *
  * TODO:
- * - update readme
+ * - update README
  * - make scrape run once per day when starting up computer
  * - contingency plan for no WIFI
  * - change name + description
