--- a/manifest.json
+++ b/manifest.json
@@ -1,39 +1,23 @@
-/**
- * Brown Dining Alert, version 1.0
- * 2019
- * project of John Randolph
- *
- * TODO:
- * - QA
- *** RELEASE VERSION 1
- * - fix bugs
- *    - make daily scrape work
- *    - put meals in order
- *    - when meal is found twice it is put in twice
- *    - if line is too long overflow is not accounted for
- * - obtain list of all foods at all dining halls
- * - upgrade UI of putting in food preferences
- */
-
 {
   "manifest_version": 2,
 
   "name": "Brown Dining Alert",
+  "short_name": "BDA",
   "description": "The best way to receive alerts about your favorite foods at Brown University",
   "version": "1.0",
   "options_page": "options_page.html",
 
-  "browser_action": {
-    "default_icon": "icon.png",//the icon
-    "default_popup": "popup.html"//what will pop up when clicked on.
-  },
-  "content_security_policy": "script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js; object-src 'self'",
-  "background" : {
-    "scripts" : ["scrape.js"]//always runs in background
-  },
   "icons" : {
     "128" : "icon.png"
   },
+  "background": {
+    "scripts": ["scrape.js"]
+  },
+  "browser_action": {
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
+  },
+  "content_security_policy": "script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js; object-src 'self'",
   "web_accessible_resources" : [
     "style.css"
   ],
@@ -41,8 +25,8 @@
       "notifications",
       "storage",
       "tabs",
-      "http://*/*",
-      "https://*/*",
+      "https://dining.brown.edu/*",
+      "https://legacy.cafebonappetit.com/*",
       "background",
       "activeTab",
       "https://ajax.googleapis.com/",
